--- a/mini-bite-eats/package.json
+++ b/mini-bite-eats/package.json
@@ -13,10 +13,12 @@
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.5.1",
+    "openai": "^4.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.32",
